// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs component should render correctly no current 1`] = `
<div>
  <nav
    aria-label="Breadcrumb"
    class="pf-v6-c-breadcrumb ins-c-breadcrumbs"
    data-ouia-component-id="OUIA-Generated-Breadcrumb-:r1:"
    data-ouia-component-type="PF6/Breadcrumb"
    data-ouia-safe="true"
  >
    <ol
      class="pf-v6-c-breadcrumb__list"
      role="list"
    >
      <li
        class="pf-v6-c-breadcrumb__item"
        data-key="0"
      >
        <a
          aria-label="first"
        >
          First
        </a>
      </li>
      <li
        class="pf-v6-c-breadcrumb__item"
        data-key="1"
      >
        <span
          class="pf-v6-c-breadcrumb__item-divider"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 20 20"
            width="1em"
          >
            <path
              d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
            />
          </svg>
        </span>
        <a
          aria-label="second"
        >
          <span>
            Second
          </span>
        </a>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumbs component should render correctly no items 1`] = `
<div>
  <nav
    aria-label="Breadcrumb"
    class="pf-v6-c-breadcrumb ins-c-breadcrumbs"
    data-ouia-component-id="OUIA-Generated-Breadcrumb-:r0:"
    data-ouia-component-type="PF6/Breadcrumb"
    data-ouia-safe="true"
  >
    <ol
      class="pf-v6-c-breadcrumb__list"
      role="list"
    >
      <li
        class="pf-v6-c-breadcrumb__item"
      >
         
        Something
         
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumbs component should render correctly with items and current item 1`] = `
<div>
  <nav
    aria-label="Breadcrumb"
    class="pf-v6-c-breadcrumb ins-c-breadcrumbs"
    data-ouia-component-id="OUIA-Generated-Breadcrumb-:r2:"
    data-ouia-component-type="PF6/Breadcrumb"
    data-ouia-safe="true"
  >
    <ol
      class="pf-v6-c-breadcrumb__list"
      role="list"
    >
      <li
        class="pf-v6-c-breadcrumb__item"
        data-key="0"
      >
        <a
          aria-label="first"
        >
          First
        </a>
      </li>
      <li
        class="pf-v6-c-breadcrumb__item"
        data-key="1"
      >
        <span
          class="pf-v6-c-breadcrumb__item-divider"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 20 20"
            width="1em"
          >
            <path
              d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
            />
          </svg>
        </span>
        <a
          aria-label="second"
        >
          <span>
            Second
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-breadcrumb__item"
      >
        <span
          class="pf-v6-c-breadcrumb__item-divider"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 20 20"
            width="1em"
          >
            <path
              d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
            />
          </svg>
        </span>
         
        Something
         
      </li>
    </ol>
  </nav>
</div>
`;
